--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,36 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+}
+div .text {
+  text-align: center;
+}
+.container{
+    display: flex;
+    gap: 15px;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.barberry{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.chilli{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+.pepper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.saffron{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* do not edit this footer */
