--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,17 +5,29 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
-
+.header{
+      display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 img {
   width: 600px;
 }
-
 button {
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -25,3 +37,25 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #eee;
+}
+.left-links{
+    display: flex;
+    list-style-type: none;
+    gap: 10px;
+    padding-inline-start: 0;
+}
+.right-links{
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+}
+a:any-link{
+  text-decoration: none;
+  color: black;
+}
+
