--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  grid-gap: 15px;
 }
 
 .container div {
@@ -21,18 +25,22 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-area: 1/1/1/3;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2/1/4/2;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-area: 2/2/2/3;
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: 3/2/4/3;
 }
 
 .article p {
@@ -44,4 +52,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4/1/4/3;
 }
