--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -7,7 +7,11 @@ body, html {
   text-align: center;
   height: 100%;
   padding: 16px;
-  box-sizing: border-box;
+  box-sizing: border-box;  
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  grid-gap: 15px;
 }
 
 .container div {
@@ -17,6 +21,7 @@ body, html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+
 }
 
 .header {
